@@ -37,6 +37,8 @@ configure: check_dependencies configure.ac Makefile.am \
 	# version of libgig from CVS as well !                               #
 	######################################################################
 
+.PHONY: clean
+
 clean:
 	@if [ -f Makefile ]; then make distclean; fi || true
 	@rm -rvf *.cache *.log *.status *.m4
